--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img class="img-responsive" src="img/scan2.jpg" alt="" style="height: 45px ; width: 45px; border-radius: 50%; display: inline; "> Радослав Младенов</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img class="img-responsive" src="img/Scan2.jpg" alt="" style="height: 45px ; width: 45px; border-radius: 50%; display: inline; "> Радослав Младенов</a>
                 
             </div>
 
