--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img class="img-responsive" src="img/Scan2.jpg" alt="" style="height: 45px ; width: 45px; border-radius: 50%; display: inline; "> Радослав Младенов</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img class="img-responsive" src="img/Scan2.JPG" alt="" style="height: 45px ; width: 45px; border-radius: 50%; display: inline; "> Радослав Младенов</a>
                 
             </div>
 
@@ -115,28 +115,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/html.jpg">
+                        <img src="img/html.JPG">
                         <h3>Sturdy Templates</h3>
                         <p class="text-muted">Our templates are updated regularly so they don't break.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/css3.jpg">
+                        <img src="img/css3.JPG">
                         <h3>Ready to Ship</h3>
                         <p class="text-muted">You can use this theme as is, or you can make changes!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/js.jpg">
+                        <img src="img/js.JPG">
                         <h3>Up to Date</h3>
                         <p class="text-muted">We update dependencies to keep things fresh.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/boot.jpg">
+                        <img src="img/boot.JPG">
                         <h3>Made with Love</h3>
                         <p class="text-muted">You have to make your websites with love these days!</p>
                     </div>
@@ -150,7 +150,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://www.ivonaandlubo.com" class="portfolio-box">
-                        <img src="img/Wedding.jpg" class="img-responsive" alt="">
+                        <img src="img/Wedding.JPG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
