--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://www.ivonaandlubo.com" class="portfolio-box">
-                        <img src="img/Wedding.JPG" class="img-responsive" alt="">
+                        <img src="img/Wedding.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
