--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading" style="color: black;">WEB DEVELOPER</h1>
                 <hr>
-                <p style="color: black;">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <!-- <p style="color: black;">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p> -->
                 <a href="mailto:r.mladenovbg@gmail.com" class="btn btn-primary btn-xl page-scroll">Contact</a>
             </div>
         </div>
