--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     li>a {padding-bottom: 25px !important;
         padding-top: 25px !important;} 
 
+
 </style>
 </head>
 
@@ -87,7 +88,8 @@
                 <h1 id="homeHeading" style="color: black;">WEB DEVELOPER</h1>
                 <hr>
                 <!-- <p style="color: black;">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p> -->
-                <a href="mailto:r.mladenovbg@gmail.com" class="btn btn-primary btn-xl page-scroll">Contact</a>
+                <a href="mailto:r.mladenovbg@gmail.com" class="btn btn-primary btn-xl page-scroll"
+                style="padding-top: 25px;">Contact</a>
             </div>
         </div>
     </header>
