--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                     </a>
                 </div> 
                 <div class="col-lg-4 col-sm-6" ">
-                      <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/grey.jpg" class="img-responsive" alt="">
+                      <a href="http://dea-lighting.bg" class="portfolio-box">
+                        <img src="img/wordpress.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
