Change my picure

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img class="img-responsive" src="img/Scan2.JPG" alt="" style="height: 45px ; width: 45px; border-radius: 50%; display: inline; "> Radoslav Mladenov</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img class="img-responsive" src="img/cv_jpg.jpg" alt="" style="height: 45px ; width: 45px; border-radius: 50%; display: inline; "> Radoslav Mladenov</a>
                 
             </div>
 
@@ -183,7 +183,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Under Construction
+                                    Wordpress site
                                 </div>
                             </div>
                         </div>
