--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </a>
                 </div> 
                 <div class="col-lg-4 col-sm-6" ">
-                      <a href="img/wordpress.jpg" class="portfolio-box">
+                      <a href="#" class="portfolio-box">
                         <img src="img/wordpress.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
